--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "docxtemplater": "^3.68.2",
     "gray-matter": "^4.0.3",
     "next": "16.1.6",
+    "pizzip": "^3.2.0",
     "react": "19.2.3",
     "react-dom": "19.2.3",
     "remark": "^15.0.1",
